--- a/src/styles/destinations.scss
+++ b/src/styles/destinations.scss
@@ -183,6 +183,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 10rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .reservation-container {
