--- a/src/styles/destinations.scss
+++ b/src/styles/destinations.scss
@@ -29,7 +29,7 @@
 .swiper-button-next,
 .swiper-button-prev {
   color: white !important;
-  background-color: green !important;
+  background-color: #97bf02 !important;
   width: 80px;
   padding: 27px;
   font-weight: bolder;
